<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/basicGridActivity"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/box1Textview"
            android:gravity="center"
            android:text="@string/box1_text"
            android:textSize="42sp"
            android:textStyle="bold"
            android:background="@color/lightPurple"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            >
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/box2Textview"
            android:gravity="center"
            android:text="@string/box2_text"
            android:textSize="42sp"
            android:textStyle="bold"
            android:background="@color/pastelViolet"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            >
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/box3Textview"
            android:gravity="center"
            android:text="@string/box3_text"
            android:textSize="42sp"
            android:textStyle="bold"
            android:background="@color/cottonCandy"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            >
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/box4Textview"
            android:gravity="center"
            android:text="@string/box4_text"
            android:textSize="42sp"
            android:textStyle="bold"
            android:background="@color/lumberColor"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            >
        </TextView>
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

