<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".basicview"
    android:id="@+id/componentActivity"
    >
    <Button
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:id="@+id/sample_button"
        android:text="@string/sample_button"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="buyButton"
        app:layout_constraintBottom_toTopOf="divider"
        >
    </Button>

    <Button
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:id="@+id/buyButton"
        android:text="@string/buy_button"
        android:background="@color/navyBlue"
        android:textColor="@color/whiteColor"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/sample_button"
        app:layout_constraintBottom_toTopOf="@id/divider"
        >
    </Button>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:id="@+id/divider"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/creamColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sample_button"
        >
    </View>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/descriptionTextView"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/contentText"
        android:justificationMode="inter_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        >
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>